<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="126dp">

        <TextView
            android:id="@+id/nomApp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/etudiantprof"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="46dp"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:text="@string/your_app"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="126dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="text"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/prenom"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:ems="10"
                android:hint="@string/telephone"
                android:inputType="text"
                android:textSize="24sp" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        tools:ignore="MissingConstraints"

        />
</LinearLayout>