<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Login">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/layout_1">

      <TextView
        android:id="@+id/nomApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/etudiantprof"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
 />

    <TextView
        android:id="@+id/desc"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:text="@string/your_app"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
       />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/layout_2"
    android:visibility="visible">
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="22sp" />
</LinearLayout>
    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        >


        <Button
            android:id="@+id/SignIn"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/se_connecter"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/s_inscrire"
            android:textStyle="bold" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/logoutvis">
    <Button
        android:id="@+id/okCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="logout"
        android:textAlignment="center"
        android:textStyle="bold" />
    </LinearLayout>




</LinearLayout>
